--- a/index.html
+++ b/index.html
@@ -5,20 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Growfy</title>
-    <link rel="icon" type="image/x-icon" href="/img/logo/logo.png" />
+    <link rel="icon" type="image/x-icon" href="/img/logo/small_logo.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:300,regular,500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/Growfy/css/style.css" />
   </head>
   <body>
     <div class="wrapper">
-      <header class="header">header</header>
-      <main class="page">main</main>
-      <footer class="footer">footer</footer>
+      <header class="header">
+        <div class="header__container">
+          <a href="/Growfy/img/logo/logo.svg" class="header__logo">
+            <img src="img/logo/logo.svg" alt="GROWFY">
+          </a>
+          <nav class="header__menu menu"></nav>
+            <div class="menu__body">
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Home</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">About</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Pages</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Services</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+
+            <a href="#" class="header__cart cart-header">
+              <span class="cart-header__text">Cart</span>
+              <span class="cart-header__quant">0</span>
+            </a>
+
+            <a href="#" class="header__button button">Get started</a>
+            <button class="icon-menu" type="button">
+              <span></span>
+            </button>
+        </div>
+      </header>
+      <main class="page">
+          main content
+      </main>
+      <footer class="footer">footer content</footer>
     </div>
-    <script src="/js/script.js"></script>
+    <script src="/Growfy/js/script.js"></script>
   </body>
 </html>
 
